fix align body

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -29,7 +29,7 @@ body::before {
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
   color: var(--cc-white);
 
